// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetricCard renders as expected when passCount is zero 1`] = `
<div
  className="MetricCard"
>
  <div
    className="MetricCard--CircularProgressbarWrapper"
  >
    <CircularProgressbar
      backgroundHue={0}
      decorationHue={0}
      maxValue={255}
      text="0.0%"
      value={0}
    />
  </div>
  <div
    className="MetricCard--Body"
  >
    <span
      className="MetricCard--TitleHeader"
    >
      Metric Name
       
      <Tooltip
        arrowPointAtCenter={true}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        prefixCls="ant-tooltip"
        title="Metric Documentation"
        transitionName="zoom-big-fast"
      >
        <a
          href="metric.documentation.link"
          rel="noreferrer noopener"
          target="_blank"
        >
          <NewWindowIcon
            isLarge={false}
          />
        </a>
      </Tooltip>
    </span>
    <p
      className="MetricCard--Description"
    >
      Metric Description
    </p>
    <div
      className="MetricCard--CountsWrapper"
    >
      <ScoreCard
        count={0}
        examples={
          Array [
            "foo",
          ]
        }
        title="Passing"
      />
      <ScoreCard
        count={255}
        examples={
          Array [
            "bar",
          ]
        }
        title="Failing"
      />
      <ScoreCard
        count={42}
        examples={
          Array [
            "baz",
          ]
        }
        title="Exemptions"
      />
    </div>
  </div>
</div>
`;

exports[`MetricCard renders as expected with details 1`] = `
<div
  className="MetricCard"
>
  <div
    className="MetricCard--CircularProgressbarWrapper"
  >
    <CircularProgressbar
      decorationHue={120}
      maxValue={363}
      text="29.7%"
      value={108}
    />
  </div>
  <div
    className="MetricCard--Body"
  >
    <span
      className="MetricCard--TitleHeader"
    >
      Metric Name
       
      <Tooltip
        arrowPointAtCenter={true}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        prefixCls="ant-tooltip"
        title="Metric Documentation"
        transitionName="zoom-big-fast"
      >
        <a
          href="metric.documentation.link"
          rel="noreferrer noopener"
          target="_blank"
        >
          <NewWindowIcon
            isLarge={false}
          />
        </a>
      </Tooltip>
    </span>
    <p
      className="MetricCard--Description"
    >
      Metric Description
    </p>
    <div
      className="MetricCard--CountsWrapper"
    >
      <ScoreCard
        count={108}
        examples={
          Array [
            "foo",
          ]
        }
        title="Passing"
      />
      <ScoreCard
        count={255}
        examples={
          Array [
            "bar",
          ]
        }
        title="Failing"
      />
      <ScoreCard
        count={42}
        examples={
          Array [
            "baz",
          ]
        }
        title="Exemptions"
      />
    </div>
    <DetailsCard
      className="MetricCard--Details"
      collapsible={true}
      columnDefs={
        Array [
          "col4",
          "col5",
        ]
      }
      description="Details[2] Description"
      details={
        Array [
          Object {
            "col4": "value for fourth column",
            "col5": "value for fifth column",
          },
        ]
      }
      header="Details"
      key="Details[2] Description[\\"col4\\",\\"col5\\"]"
    />
    <DetailsCard
      className="MetricCard--Details"
      collapsible={true}
      columnDefs={
        Array [
          "col6",
          "col7",
        ]
      }
      description="Details[3] Description"
      details={
        Array [
          Object {
            "col6": "value for sixth column",
            "col7": "value for seventh column",
          },
        ]
      }
      header="Details[3] Header"
      key="Details[3] Description[\\"col6\\",\\"col7\\"]"
    />
  </div>
</div>
`;

exports[`MetricCard renders as expected without details 1`] = `
<div
  className="MetricCard"
>
  <div
    className="MetricCard--CircularProgressbarWrapper"
  >
    <CircularProgressbar
      decorationHue={120}
      maxValue={363}
      text="29.7%"
      value={108}
    />
  </div>
  <div
    className="MetricCard--Body"
  >
    <span
      className="MetricCard--TitleHeader"
    >
      Metric Name
       
      <Tooltip
        arrowPointAtCenter={true}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        prefixCls="ant-tooltip"
        title="Metric Documentation"
        transitionName="zoom-big-fast"
      >
        <a
          href="metric.documentation.link"
          rel="noreferrer noopener"
          target="_blank"
        >
          <NewWindowIcon
            isLarge={false}
          />
        </a>
      </Tooltip>
    </span>
    <p
      className="MetricCard--Description"
    >
      Metric Description
    </p>
    <div
      className="MetricCard--CountsWrapper"
    >
      <ScoreCard
        count={108}
        examples={
          Array [
            "foo",
          ]
        }
        title="Passing"
      />
      <ScoreCard
        count={255}
        examples={
          Array [
            "bar",
          ]
        }
        title="Failing"
      />
      <ScoreCard
        count={42}
        examples={
          Array [
            "baz",
          ]
        }
        title="Exemptions"
      />
    </div>
  </div>
</div>
`;

exports[`MetricCard renders as expected without details 2`] = `
<div
  className="MetricCard"
>
  <div
    className="MetricCard--CircularProgressbarWrapper"
  >
    <CircularProgressbar
      decorationHue={120}
      maxValue={363}
      text="29.7%"
      value={108}
    />
  </div>
  <div
    className="MetricCard--Body"
  >
    <span
      className="MetricCard--TitleHeader"
    >
      Metric Name
       
      <Tooltip
        arrowPointAtCenter={true}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        prefixCls="ant-tooltip"
        title="Metric Documentation"
        transitionName="zoom-big-fast"
      >
        <a
          href="metric.documentation.link"
          rel="noreferrer noopener"
          target="_blank"
        >
          <NewWindowIcon
            isLarge={false}
          />
        </a>
      </Tooltip>
    </span>
    <p
      className="MetricCard--Description"
    >
      Metric Description
    </p>
    <div
      className="MetricCard--CountsWrapper"
    >
      <ScoreCard
        count={108}
        examples={
          Array [
            "foo",
          ]
        }
        title="Passing"
      />
      <ScoreCard
        count={255}
        examples={
          Array [
            "bar",
          ]
        }
        title="Failing"
      />
      <ScoreCard
        count={42}
        examples={
          Array [
            "baz",
          ]
        }
        title="Exemptions"
      />
    </div>
  </div>
</div>
`;
